<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    tools:context=".ActivityPlay">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewMenu"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/todo_background_card"
        app:cardCornerRadius="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TEMÁTICAS"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="50sp"
                android:textStyle="normal"
                android:gravity="center"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnAnimalsPlay"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/button_1"
        android:text="@string/Animals"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@id/viewMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/title_text"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnColorsPlay"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/button_2"
        android:text="@string/Colors"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnAnimalsPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/title_text"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnFruitsPlay"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/button_2"
        android:text="@string/Fruits"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnColorsPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/title_text"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnAlphabetPlay"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/button_3"
        android:text="@string/Alphabet"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnFruitsPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/title_text"
        android:textSize="40sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>