<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    tools:context=".ActivityPlayAnimalCow">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/todo_background_card"
        app:cardCornerRadius="32dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="¿Qué animal es?"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="¿what´s animal?"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/todo_background_card"
        app:cardCornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewText2"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/cow"
                android:layout_margin="@dimen/cardview_default_radius"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnPlayOptDog"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/button_1"
        android:text="@string/Perro"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        app:layout_constraintTop_toBottomOf="@id/viewCard"
        app:layout_constraintEnd_toStartOf="@id/btnPlayOptCat"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/title_text"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnPlayOptCat"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/button_1"
        android:text="@string/Gato"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        app:layout_constraintTop_toBottomOf="@id/viewCard"
        app:layout_constraintEnd_toStartOf="@id/btnPlayOptCow"
        app:layout_constraintStart_toEndOf="@id/btnPlayOptDog"
        android:textColor="@color/title_text"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnPlayOptCow"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/button_1"
        android:text="@string/Vaca"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf= "@id/viewCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf= "@id/btnPlayOptCat"
        android:textColor="@color/title_text"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnPlayOptBee"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/button_1"
        android:text="@string/Abeja"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnPlayOptDog"
        app:layout_constraintStart_toStartOf= "parent"
        app:layout_constraintEnd_toStartOf="@id/btnPlayOptHen"
        android:textColor="@color/title_text"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnPlayOptHen"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/button_1"
        android:text="@string/Gallina"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnPlayOptCat"
        app:layout_constraintEnd_toStartOf= "@id/btnPlayOptPig"
        app:layout_constraintStart_toEndOf="@id/btnPlayOptBee"
        android:textColor="@color/title_text"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnPlayOptPig"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/button_1"
        android:text="@string/Marrano"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnPlayOptCow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPlayOptHen"
        android:textColor="@color/title_text"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewScore"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/todo_background_card"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPlayOptHen"

        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/like"
                android:layout_margin="@dimen/cardview_default_radius"
                />
            <TextView
                android:id="@+id/tvScoreGood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/6    "
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPlayNext"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@color/button_1"
                android:text="@string/Siguiente"
                android:textColor="@color/title_text"
                android:textSize="30sp"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>