<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    tools:context=".ActivityPlayColorPink">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/todo_background_card"
        app:cardCornerRadius="32dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="¿Qué color es?"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="¿what´s color?"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewColorCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/todo_background_card"
        app:cardCornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewText2"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/color_android"
                app:tint="@color/pink"
                android:layout_margin="@dimen/cardview_default_radius"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnPlayOptGreen"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/button_1"
        android:text="@string/Verde"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        app:layout_constraintTop_toBottomOf="@id/viewColorCard"
        app:layout_constraintEnd_toStartOf="@id/btnPlayOptYellow"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/title_text"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnPlayOptYellow"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/button_1"
        android:text="@string/Amarillo"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@id/viewColorCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPlayOptGreen"
        android:textColor="@color/title_text"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnPlayOptWhite"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/button_1"
        android:text="@string/Blanco"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnPlayOptGreen"
        app:layout_constraintStart_toStartOf= "parent"
        app:layout_constraintEnd_toStartOf="@id/btnPlayOptPink"
        android:textColor="@color/title_text"
        android:textSize="30sp"
        android:layout_marginEnd="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnPlayOptPink"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/button_1"
        android:text="@string/Rosado"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnPlayOptYellow"
        app:layout_constraintEnd_toEndOf= "parent"
        app:layout_constraintStart_toEndOf="@id/btnPlayOptWhite"
        android:textColor="@color/title_text"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewScore"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/todo_background_card"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPlayOptPink"

        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/like"
                android:layout_margin="@dimen/cardview_default_radius"
                />
            <TextView
                android:id="@+id/tvScoreGood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/6    "
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPlayNext"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:background="@color/button_1"
                android:text="@string/Siguiente"
                android:textColor="@color/title_text"
                android:textSize="30sp"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>